--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -4,8 +4,8 @@
 project     = My Public Info Project
 version     = 1.0
 release     = 1.0.0
-t3author    = Erika and Max Mustermann
-copyright   = since 1999 by the authors
+t3author    = My Name
+copyright   = since 1999 by the author
 
 description = This is a short description
    of what it's all about.
@@ -20,6 +20,11 @@ description = This is a short description
 # pygments_style = 'sphinx'
 # source_suffix = ['.rst', '.md']
 # todo_include_todos = False
+
+
+[notify]
+
+about_new_builds = no
 
 
 [html_theme_options]
