Set 'add_piwik = yes'

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -30,6 +30,7 @@ about_new_builds = no
 [html_theme_options]
 
 ; for theme t3SphinxThemeRtd
+add_piwik = yes
 
 # to get the "Edit me on Github Button"
 github_branch        = master
